# CBDP04_ScalableAndDistributedDataProc

./: .clang-tidy  .gitlab-ci.yml  AZURE_TUTORIAL.md  CMakeLists.txt  CurlEasyPtr.cpp  CurlEasyPtr.h  Dockerfile  README.md  coordinator.cpp  groupMembers.txt  runTest.sh  testResilience.sh  testWorkload.sh  worker.cpp
data/: .gitignore  splitCSV.sh  test.csv
sockets_test/: server.cpp
